# unified_api_4x

./: release_history.txt
vtss_api/: CMakeLists.txt  COPYING  Makefile_10g  Makefile_1g  README.txt  build_10g_phy.sh  build_10g_phy_alone.sh  build_atom12_vsc8522ev.sh  build_elise_vsc8514ev.sh  build_nano_vsc8502ev.sh  build_tesla_cli_sw_eval.sh  build_tesla_vsc8574ev.sh  build_viper_cli_sw_eval.sh  build_viper_vsc8584ev.sh  release_history.txt
vtss_api/.cmake/: common.cmake  flags.cmake  mkid.cmake  tags.cmake  vtss_api-config-version.cmake.in  vtss_api-config.cmake.in
vtss_api/appl/: CMakeLists.txt  vtss_appl.c  vtss_appl.h  vtss_appl_board_atom12_eval.c  vtss_appl_board_daytona.c  vtss_appl_board_elise_eval.c  vtss_appl_board_generic.c  vtss_appl_board_generic_uio.c  vtss_appl_board_generic_vrap.c  vtss_appl_board_jr1_eval.c  vtss_appl_board_jr2_vsim.c  vtss_appl_board_l26_eval.c  vtss_appl_board_nano_eval.c  vtss_appl_board_serval_eval.c  vtss_appl_board_serval_vsim.c  vtss_appl_board_seville_ref.c  vtss_appl_board_tesla_eval.c  vtss_appl_board_viper_eval.c  vtss_appl_cli.c  vtss_appl_cli.h  vtss_appl_cu_phy.c  vtss_appl_cu_phy.h  vtss_appl_macsec_kat_test.c  vtss_remote_ts_phy_api.h  vtss_version.c  vtss_version.h
vtss_api/appl/hostsim/: CMakeLists.txt  README.txt
vtss_api/base/ail/: vtss_ae_api.c  vtss_afi_api.c  vtss_afi_state.h  vtss_aneg_api.c  vtss_api.c  vtss_api_internal.h  vtss_common.c  vtss_common.h  vtss_evc_api.c  vtss_evc_state.h  vtss_fdma.c  vtss_fdma.h  vtss_fdma_common.c  vtss_fdma_common.h  vtss_gfp_api.c  vtss_hqos_api.c  vtss_hqos_state.h  vtss_i2c_api.c  vtss_l2_api.c  vtss_l2_state.h  vtss_l3.c  vtss_l3_state.h  vtss_mac10g_api.c  vtss_misc_api.c  vtss_misc_state.h  vtss_mpls_api.c  vtss_mpls_common.c  vtss_mpls_common.h  vtss_mpls_state.h  vtss_oam_api.c  vtss_oam_state.h  vtss_oha_api.c  vtss_otn_api.c  vtss_packet_api.c  vtss_packet_state.h  vtss_pcs_10gbase_r_api.c  vtss_phy_10g_api.c  vtss_pll5g_procs.c  vtss_pll5g_procs.h  vtss_port_api.c  (+23 more)
vtss_api/base/daytona/: vtss_daytona.c  vtss_daytona.h  vtss_daytona_ae.c  vtss_daytona_ae.h  vtss_daytona_aneg.c  vtss_daytona_aneg.h  vtss_daytona_basics.c  vtss_daytona_basics.h  vtss_daytona_gfp.c  vtss_daytona_gfp.h  vtss_daytona_i2c.c  vtss_daytona_i2c.h  vtss_daytona_mac10g.c  vtss_daytona_mac10g.h  vtss_daytona_oha.c  vtss_daytona_oha.h  vtss_daytona_otn.c  vtss_daytona_otn.h  vtss_daytona_pcs_10gbase_r.c  vtss_daytona_pcs_10gbase_r.h  vtss_daytona_rab.c  vtss_daytona_rab.h  vtss_daytona_reg_init_block_states.h  vtss_daytona_reg_init_block_states.inc  vtss_daytona_reg_init_gcb.h  vtss_daytona_reg_init_gcb.inc  vtss_daytona_reg_init_gcb_client_pll.h  vtss_daytona_reg_init_gcb_client_pll.inc  vtss_daytona_reg_init_gcb_line_pll.h  vtss_daytona_reg_init_gcb_line_pll.inc  vtss_daytona_reg_init_gfp.h  vtss_daytona_reg_init_gfp.inc  vtss_daytona_reg_init_mac.h  vtss_daytona_reg_init_mac.inc  vtss_daytona_reg_init_otu.h  vtss_daytona_reg_init_otu.inc  vtss_daytona_reg_init_otu_fec.h  vtss_daytona_reg_init_otu_fec.inc  vtss_daytona_reg_init_pcs.h  vtss_daytona_reg_init_pcs.inc  (+58 more)
vtss_api/base/jaguar1/: vtss_jaguar1.c  vtss_jaguar1.h  vtss_jaguar1_cil.h  vtss_jaguar1_evc.c  vtss_jaguar1_l2.c  vtss_jaguar1_l3.c  vtss_jaguar1_misc.c  vtss_jaguar1_packet.c  vtss_jaguar1_port.c  vtss_jaguar1_qos.c  vtss_jaguar1_ts.c  vtss_jaguar1_vcap.c  vtss_jaguar_reg.h  vtss_jaguar_regs.h  vtss_jaguar_regs_ana_ac.h  vtss_jaguar_regs_ana_cl_2.h  vtss_jaguar_regs_ana_l2.h  vtss_jaguar_regs_ana_l3_2.h  vtss_jaguar_regs_arb.h  vtss_jaguar_regs_asm.h  vtss_jaguar_regs_common.h  vtss_jaguar_regs_dev10g.h  vtss_jaguar_regs_dev1g.h  vtss_jaguar_regs_dev2g5.h  vtss_jaguar_regs_devcpu_gcb.h  vtss_jaguar_regs_devcpu_org.h  vtss_jaguar_regs_devcpu_pi.h  vtss_jaguar_regs_devcpu_qs.h  vtss_jaguar_regs_devnpi.h  vtss_jaguar_regs_dsm.h  vtss_jaguar_regs_fdma.h  vtss_jaguar_regs_icpu_cfg.h  vtss_jaguar_regs_iqs.h  vtss_jaguar_regs_lrn.h  vtss_jaguar_regs_macro_ctrl.h  vtss_jaguar_regs_oqs.h  vtss_jaguar_regs_rew.h  vtss_jaguar_regs_sba.h  vtss_jaguar_regs_sch.h  vtss_jaguar_regs_twi.h  (+5 more)
vtss_api/base/jaguar2/: vtss_jaguar2.c  vtss_jaguar2.h  vtss_jaguar2_afi.c  vtss_jaguar2_cil.h  vtss_jaguar2_fdma.c  vtss_jaguar2_fdma.h  vtss_jaguar2_l2.c  vtss_jaguar2_l3.c  vtss_jaguar2_misc.c  vtss_jaguar2_packet.c  vtss_jaguar2_port.c  vtss_jaguar2_qos.c  vtss_jaguar2_reg.h  vtss_jaguar2_regs.h  vtss_jaguar2_regs_afi.h  vtss_jaguar2_regs_ana_ac.h  vtss_jaguar2_regs_ana_ac_oam_mod.h  vtss_jaguar2_regs_ana_ac_pol.h  vtss_jaguar2_regs_ana_acl.h  vtss_jaguar2_regs_ana_cl.h  vtss_jaguar2_regs_ana_l2.h  vtss_jaguar2_regs_ana_l3.h  vtss_jaguar2_regs_asm.h  vtss_jaguar2_regs_common.h  vtss_jaguar2_regs_dev10g.h  vtss_jaguar2_regs_dev1g.h  vtss_jaguar2_regs_dev2g5.h  vtss_jaguar2_regs_devcpu_gcb.h  vtss_jaguar2_regs_devcpu_org.h  vtss_jaguar2_regs_devcpu_ptp.h  vtss_jaguar2_regs_devcpu_qs.h  vtss_jaguar2_regs_dsm.h  vtss_jaguar2_regs_hsch.h  vtss_jaguar2_regs_hsio.h  vtss_jaguar2_regs_icpu_cfg.h  vtss_jaguar2_regs_kr_dev1.h  vtss_jaguar2_regs_kr_dev7.h  vtss_jaguar2_regs_lrn.h  (+62 more)
vtss_api/boards/: board_probe.c  board_probe.h  port_custom_api.h  port_custom_jr1.c  port_custom_jr1_api.h  port_custom_jr1_cu48.c  port_custom_jr2.c  port_custom_lu26.c  port_custom_serval.c  port_custom_seville.c
vtss_api/doc/: Doxyfile.in  README.txt
vtss_api/include/: vtss_ae_api.h  vtss_afi_api.h  vtss_aneg_api.h  vtss_api.h  vtss_api_config.h.in  vtss_evc_api.h  vtss_fdma_api.h  vtss_gfp_api.h  vtss_hqos_api.h  vtss_i2c_api.h  vtss_init_api.h  vtss_l2_api.h  vtss_l3_api.h  vtss_mac10g_api.h  vtss_macsec_api.h  vtss_misc_api.h  vtss_mpls_api.h  vtss_oam_api.h  vtss_oha_api.h  vtss_os.h  vtss_os_custom.h  vtss_os_ecos.h  vtss_os_linux.h  vtss_otn_api.h  vtss_packet_api.h  vtss_pcs_10gbase_r_api.h  vtss_phy_10g_api.h  vtss_phy_api.h  vtss_phy_ts_api.h  vtss_port_api.h  vtss_qos_api.h  vtss_rab_api.h  vtss_security_api.h  vtss_sfi4_api.h  vtss_sync_api.h  vtss_tfi5_api.h  vtss_ts_api.h  vtss_upi_api.h  vtss_wis_api.h  vtss_xaui_api.h  (+1 more)
vtss_api/linux_support/: .cvsignore
(+242 files in other folders)
